--- a/public/index.html
+++ b/public/index.html
@@ -197,6 +197,7 @@
       <div style="margin-top: 10px;">
         <button id="edit-bill-btn" class="btn-warning">Edit Bill</button>
         <button id="delete-bill-btn" class="btn-danger">Delete Bill</button>
+        <button id="print-bill-btn" class="btn-primary">Print Bill</button>
         <button id="close-bill-detail" class="btn-secondary">Close</button>
       </div>
     </div>
@@ -257,7 +258,6 @@ document.querySelectorAll('nav a').forEach(a => {
     if (sec === 'expired') loadExpired();
     if (sec === 'sales') {
       loadSaleProducts();
-      // no automatic checkEditMode to avoid duplicate editBill calls
     }
     if (sec === 'bills') loadBills();
     if (sec === 'borrowers') loadBorrowers();
@@ -356,6 +356,7 @@ async function loadExpired() {
 let saleProducts = [];
 let currentBillId = null;
 let isLoadingEditBill = false;
+let lastBillData = null; // for printing
 
 async function loadSaleProducts() {
   const data = await fetchJSON(`${API_BASE}?route=sale-products`);
@@ -612,6 +613,8 @@ async function showBillDetail(saleId) {
   if (!data) return;
 
   currentBillId = saleId;
+  lastBillData = data; // for printing
+
   const container = document.getElementById('bill-detail-container');
   const detailEl = document.getElementById('bill-detail');
   
@@ -667,6 +670,81 @@ document.getElementById('delete-bill-btn').addEventListener('click', async () =>
   } else {
     alert('Error deleting bill');
   }
+});
+
+// PRINT BILL
+document.getElementById('print-bill-btn').addEventListener('click', () => {
+  if (!lastBillData || !lastBillData.sale) {
+    alert('No bill loaded to print');
+    return;
+  }
+
+  const { sale, items } = lastBillData;
+
+  const win = window.open('', '_blank', 'width=600,height=800');
+  win.document.write(`
+    <html>
+    <head>
+      <title>Bill #${sale.id}</title>
+      <style>
+        body { font-family: Arial, sans-serif; margin: 20px; }
+        h2, h3 { margin: 0 0 10px 0; }
+        table { border-collapse: collapse; width: 100%; margin-top: 10px; }
+        th, td { border: 1px solid #000; padding: 6px; font-size: 13px; }
+        th { background: #f0f0f0; }
+        .totals { margin-top: 15px; }
+        .totals p { margin: 3px 0; }
+        @media print {
+          button { display: none; }
+        }
+      </style>
+    </head>
+    <body>
+      <h2>Invoice / Bill</h2>
+      <p><strong>Bill No:</strong> ${sale.id}</p>
+      <p><strong>Date:</strong> ${sale.sale_date}</p>
+      <p><strong>Customer:</strong> ${sale.customer_name || 'Walk-in'}</p>
+      <p><strong>Payment Type:</strong> ${sale.payment_type}</p>
+
+      <h3>Items</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Product</th>
+            <th>Price (₹)</th>
+            <th>Qty</th>
+            <th>Total (₹)</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${items.map((item, idx) => `
+            <tr>
+              <td>${idx + 1}</td>
+              <td>${item.name}</td>
+              <td>${Number(item.price).toFixed(2)}</td>
+              <td>${item.quantity}</td>
+              <td>${Number(item.line_total).toFixed(2)}</td>
+            </tr>
+          `).join('')}
+        </tbody>
+      </table>
+
+      <div class="totals">
+        <p><strong>Total:</strong> ₹${Number(sale.total_amount).toFixed(2)}</p>
+        <p><strong>Paid:</strong> ₹${Number(sale.paid_amount).toFixed(2)}</p>
+        <p><strong>Balance:</strong> ₹${Number(sale.borrow_amount).toFixed(2)}</p>
+      </div>
+
+      <p style="margin-top:25px;">Signature ____________________</p>
+
+      <button onclick="window.print()">Print</button>
+    </body>
+    </html>
+  `);
+  win.document.close();
+  win.focus();
+  win.print();
 });
 
 // --- BORROWERS ---
