--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,10 @@
       <span id="sale-total" style="font-size: 18px; font-weight: bold;">₹0.00</span>
     </div>
     <div class="form-row">
+      <lable>Discount</lable>
+      <input id="sale-discount" type="number" step="0.01" value="0" min="0">
+    </div>
+    <div class="form-row">
       <label>Paid amount:</label>
       <input id="sale-paid" type="number" step="0.01" value="0" min="0">
     </div>
@@ -813,4 +817,5 @@ loadDashboard();
 </script>
 </body>
 </html>
+
 
