--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
       <span id="sale-total" style="font-size: 18px; font-weight: bold;">₹0.00</span>
     </div>
     <div class="form-row">
-      <lable>Discount:</lable>
+      <label>Discount:</label>
       <input id="sale-discount" type="number" step="0.01" value="0" min="0">
     </div>
     <div class="form-row">
@@ -822,6 +822,7 @@ loadDashboard();
 </script>
 </body>
 </html>
+
 
 
 
